# smart-health-care

./: README.md  app.py  database.py  pyproject.toml
templates/: about.html  bmi.html  bpm.html  home.html  patient_data.html
